[package]
name = "quaditsync"
version = "1.0.1"
authors = ["Anton Whalley <antonwhalley@yahoo.com>"]
edition = "2018"
license = "MIT"
description = "Library that facilitates monitoring Git repositories for changes. Could enable GitOps based on gitsync but extended for quadit"
repository = "https://github.com/no9/quaditsync"

[dependencies]
git2 = "0.16"
log = "0.4"

[dev-dependencies]
async-trait = "0.1"
cucumber = { version = "0.19" }
tempfile = "3.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "cucumber"
harness = false
